k8s/headless-service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger-db
  namespace: wger-devops
spec:
  clusterIP: None
  selector:
    app: wger-db
  ports:
    - port: 5432
