k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wger-service
  namespace: wger-devops
spec:
  selector:
    app: wger
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
